Updated content to reference website

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <title>Web Design 1 Reference Site</title>
 </head>
 <body>
-    
+Naming convention for all filenames, paths and folders
+Best practices for commit messages
+What is HTML?
+Proper syntax for HTML tags
+Explain or demonstrate commonly used html tags/elements:
+headings: h1-h6
+p
+lists: ul, ol, dl
+a
+img
+figure (img & figcaption)
+q
+blockquote
+cite
+em
+strong
+b
+i
+small    
 </body>
 </html>
