--- a/index.html
+++ b/index.html
@@ -26,9 +26,13 @@
           
           <h3>Rules for naming files and paths</h3>
           <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li>all lowercase - different operating systems treat capitilization differently (Good Example: ten-tree-logo.svg Bad Example: Today-in-History.html)</li>
+            <li>No spaces - URLs cannot have spaces in them (Good Example: chocolate-cake-recipe.html Bad Example: chocolate cake recipe.html)</li>
+          <!--it will display as "chocolate%20cake%20recipe.html"-->
+            <li>Only letters, numbers, and dashes (-) - URLs use a limited set of characters 
+            <!--dashes are word seperators, while underscores are word connectors--> 
+            (Good Example: west-coast-art-2021.html Bad Example: red_porche.jpg</li>
+          <!--search engine will index as "redporche" vs "red" "porche"-->
           </ul>
         </section>
         
