--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <p>Heading tags are used to mark headings according to their importance. </p>
           <!--Syntax - when writing HTML, the tags used to define the purpose of the text follow a specific syntax. There is the open tag (<h1>), the close tag (</h1), the tag name (h1), the element content (I am the heading), and the element (<h1> I am the heading </h1>)-->
           <ol>
-            <li><h1>Heading 1</h1></li>li>
+            <li><h1>Heading 1</h1></li>
             <p>This can only be used once on a web page. It is also the most important.</p>
             <!--a paragraph defines a paragraph of text. It is a block-level element and always starts on a new line. -->
             <li><h2>Heading 2</h2></li>
