Add image and nav for images

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <li><a href="#commit-messages">Commit messages</a></li>
             <li><a href="#html-elements">HTML Elements</a></li>
             <li><a href="#linking-websites">Linking Websites</a></li>
+            <li><a href="#images">Images</a></li>
             <!--<a href=""> link text </a> the opening <tells where the link should start and the closing </a> indicates where the link ends. To create a hyperlink, you should use the <a> tag and href attribute, the value of which is the URL, or location, where the link is pointing to.-->
             </ul>
         </nav>
@@ -109,6 +110,12 @@
           <p>Below is a link to a website that I have been using since grade school! It is a very handy tool to use when you're stuck on a word or definition. Click on the link and test it out.</p>
            <a href="https://www.wordhippo.com" aria-label="Get help with words, definitions, etc">Word Hippo</a>
 
+        </section>
+
+        <section id="images">
+          <h2>Images</h2>
+            <p>Here is an assignment I did for concept sketching class!</P>
+          <img src="images/hand-drawings.jpeg"/>
         </section>
 
         <!--used to wrap around related pieces of content. Usually each section has its own heading-->
